...
        android:title="@string/dropdown"
        android:icon="@drawable/dropdown"
        android:orderInCategory="1"
        app:iconTint="@color/white"
        app:showAsAction="always"
        />
    <item android:id="@+id/header_bar_add_task"
        android:title="@string/add_button_text"
        android:icon="@drawable/ic_add"
        android:orderInCategory="2"
        app:iconTint="@color/white"
        app:showAsAction="always"
        />
...
